Fixed vertical alignment between accomodation and popular cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@ form button:hover {
 
   width: 100%;
 
-  margin-bottom: 8px;
+  margin-bottom: 23px;
 }
 
 #title_wrapper h2 {
